refactor: request형식 수정 등 리팩토링: